# pyxsim

./: .gitattributes  .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  COPYING.txt  MANIFEST.in  README.md  clean.sh  pyproject.toml  setup.cfg  setup.py
.github/: build-test.yml
.github/workflows/: backfill-wheels.yaml  build-test.yml  publish_conda.yml  wheels.yaml
conda/: build_env.yaml  ci_install.sh  meta.yaml
doc/: Makefile  make.bat
doc/source/: Line_Emission.ipynb  Power_Law.ipynb  Sloshing.ipynb  Xray_Binaries.ipynb  absorb_models.rst  background.rst  basic_concepts.rst  basic_yt_concepts.rst  changelog.rst  conf.py  event_lists.rst  examples.rst  faq.rst  generating_events.rst  generating_photons.rst  getting_help.rst  grid_source.rst  how_it_works.rst  index.rst  installing.rst  instrument_simulators.rst  instruments.rst  light_cone.rst  line_emission.rst  line_sources.rst  misc.rst  parallel.rst  photon_lists.rst  physics.rst  point_sources.rst  power_law.rst  sloshing.rst  source_generators.rst  source_models.rst  spectra.rst  spectral_models.rst  thermal_sources.rst  v1_to_v2.rst  v2_to_v3.rst  v3_to_v4.rst  (+3 more)
doc/source/api/: event_list.rst  index.rst  instruments.rst  light_cone.rst  modules.rst  photon_list.rst  source_generators.rst  source_models.rst  spectral_models.rst  utils.rst
doc/source/cookbook/: Advanced_Thermal_Emission.ipynb  Line_Emission.ipynb  More_Advanced_Thermal_Emission.ipynb  Power_Law.ipynb  Sloshing.ipynb  Thermal_Emission.ipynb  index.rst  line_emission.rst
doc/source/photon_lists/: absorption.rst  allsky.rst  event_lists.rst  generation.rst  index.rst  instruments.rst  light_cone.rst  overview.rst
doc/source/source_models/: charge_exchange.rst  index.rst  line_sources.rst  powerlaw_sources.rst  thermal_sources.rst
photon_simulator/: __init__.py  api.py  event_list.py  main.py  photon_list.py  photon_models.py  photon_simulator.py  responses.py  source_models.py  spectral_models.py  utils.py
photon_simulator/tests/: beta_model_source.py  test_beta_model.py  test_line_emission.py  test_power_law.py  test_sloshing.py  test_spectra.py
pyxsim/: __init__.py  _version.py  cutils.pyx  event_list.py  grid_source.py  instruments.py  internal_absorption.py  light_cone.py  photon_list.py  responses.py  source_models.py  spectral_models.py  utils.py  xray_binaries.py  xray_fields.py
pyxsim/lib/: interpolate.pyx  scatter_events.pyx  sky_functions.c  sky_functions.pyx  spectra.pyx
pyxsim/response_files/: acisi_aimpt_cy18.arf  acisi_aimpt_cy18.rmf  aciss_aimpt_cy18.arf  aciss_aimpt_cy18.rmf  ah_sxs_5ev_20130806.rmf  athena_wfi_1469_onaxis_w_filter_v20150326.arf  athena_wfi_rmf_v20150326.rmf  athena_xifu_1469_onaxis_pitch265um_v20150327.arf  hitomi_sxs.arf  sxt-s_140505_ts02um_intallpxl.arf  xrs_calorimeter.arf  xrs_calorimeter.rmf  xrs_hdxi.arf
pyxsim/source_generators/: __init__.py  background.py  grid_source.py  light_cone.py  point_sources.py  radial_profiles.py  simple_datasets.py  xray_binaries.py
pyxsim/source_models/: __init__.py  line_sources.py  power_law_sources.py  sources.py  thermal_sources.py
pyxsim/source_models/thermal_sources/: __init__.py  base.py  charge_exchange.py  collisional.py  photoionization.py
pyxsim/spectral_files/: tbabs_table.h5
pyxsim/tests/: conftest.py  coveragerc  test_absorption.py  test_background.py  test_beta_model.py  test_light_cone.py  test_line_emission.py  test_pixel_to_cel.py  test_point_source.py  test_power_law.py  test_sloshing.py  test_spectra.py  test_utils.py  test_xray_binaries.py  utils.py
pyxsim9/: pyxsim9.db
tests/: ci_install.sh  run_tests.sh
