[build-system]
requires = [
  "setuptools>=45",
  "setuptools_scm[toml]>=6.2",
  # see https://github.com/numpy/numpy/pull/18389
  "wheel>=0.36.2",
  "Cython>=0.29.21, <3.1",
  "numpy>=1.25, <2.0",
]

requires-python = ">=3.9.2"

[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
combine_as_imports = true
skip =  ["venv", "benchmarks"]
known_third_party = [
  "IPython",
  "soxs",
  "numpy",
  "matplotlib",
  "git",
  "yaml",
  "dateutil",
  "requests",
  "coverage",
  "pytest",
  "astropy",
  "scipy",
  "pathlib",
]
known_first_party = ["pyxsim"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
